SERVER-1376 yield in query set runner for query,count,update,delete